--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head> 
-    <title>React App</title>
+    <title>Keith Winfield</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
