--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   </head>
   <body>
     <div id="root"></div>
@@ -17,5 +18,22 @@
     <script>$('#myModal').on('shown.bs.modal', function () {
       $('#myInput').trigger('focus')
     })</script>
+    <script>
+      $(document).ready(function () {
+  
+          $('.first-button').on('click', function () {
+  
+          $('.animated-icon1').toggleClass('open');
+      });
+      $('.second-button').on('click', function () {
+  
+      $('.animated-icon2').toggleClass('open');
+      });
+      $('.third-button').on('click', function () {
+  
+      $('.animated-icon3').toggleClass('open');
+      });
+  });
+  </script>
   </body>
 </html>
