--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>Keith Winfield</title>
     <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <link rel="icon" href="/images/portfolio-logo.jpg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
